syntax="proto2";

package PhobosRpc;

service TaskService {
    
    // list all task.
    // @Meta("player,route")
    rpc ListTask(ListTaskArgs) returns(ListTaskReply);
    
    // get task with id.
    // @Meta("player,route")
    rpc GetTask(GetTaskArgs) returns(GetTaskReply);
    
    // add new task.
    // @Meta("player,route")
    rpc AddTask(AddTaskArgs) returns(AddTaskReply);
    
    // delete task with id.
    // @Meta("player,route")
    rpc DelTask(DelTaskArgs) returns(DelTaskReply);
}

// -----------------------------------------------------------------------

message ListTaskArgs {
    
}


message ListTaskReply {
    
}

// -----------------------------------------------------------------------

message GetTaskArgs
{
    optional int32 taskId = 1;
}

message GetTaskReply
{
}

// -----------------------------------------------------------------------

message AddTaskArgs
{
    optional string taskName = 1;
    optional int64 taskTime = 2;
}

message AddTaskReply
{
    
}

// -----------------------------------------------------------------------

message DelTaskArgs
{
    optional int32 taskId = 1;
}

message DelTaskReply
{
    
}